# Innate-AoS

./: .gitignore  README.md
backend/: .env.example  benchmark-results.json  benchmark-thinking-sample.json  pyproject.toml  triage-results.json
backend/evaluation/: manual_triage_set.json
backend/examples/: basic_zai_chat.py
backend/src/aos/: __init__.py  app.py
backend/src/aos/api/: __init__.py  drafts.py  server.py
backend/src/aos/briefing/: __init__.py  cli.py  generator.py  refresh_frontend.py
backend/src/aos/llm/: __init__.py  zai_client.py
backend/src/aos/triage/: __init__.py  benchmark.py  classifier.py  cli.py  io.py  models.py  refresh_frontend.py
backend/tests/: test_briefing_generator.py  test_draft_api.py  test_triage_classifier.py  test_zai_client.py
frontend/: eslint.config.mjs  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: BriefEntry.tsx  BriefEntryList.tsx  BriefFilters.tsx  BriefSummary.tsx  BriefingPanel.tsx  DailyBriefHeader.tsx  DecisionRail.tsx  DraftComposer.tsx  ExecutiveDashboard.tsx  FlagsSection.tsx  HandoffGrid.tsx  MessageCard.tsx  MessageDetailModal.tsx  MessageTabs.tsx  PendingBriefEntry.tsx  SignalMap.tsx  SummaryMetrics.tsx  Toast.tsx
frontend/src/data/: curatedAnalysis.ts  dailyBriefing.json  sampleMessages.ts  triageResults.json
frontend/src/lib/: api.ts  briefing.ts  clipboard.ts  drafts.ts  format.ts  triage.ts
frontend/src/types/: message.ts
