[project]
name = "innate-aos-backend"
version = "0.1.0"
description = "Backend skeleton for the Innate AI Chief of Staff assessment."
requires-python = ">=3.10"
dependencies = []

[project.scripts]
aos-triage = "aos.triage.cli:main"
aos-refresh-frontend-triage = "aos.triage.refresh_frontend:main"
aos-benchmark-models = "aos.triage.benchmark:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
package = true
